--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,23 @@ p{
     line-height: var(--leading);
 }
 
+.overlay{
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 1;
+    place-content: center;
+    color: white;
+    display: none;
+    opacity: 0;
+}
+
+.animate-overlay{
+    animation: overlay 3s forwards;
+}
+
+
 @media (min-width: 730px){
     section {
         margin : 0 4em;
@@ -206,8 +223,8 @@ p{
     }
     .right-col{
         grid-area: content;
-        padding: 0 10%;
-        align-self: center;
+        padding: 1em 10%;
+        align-self: top;
         text-align: left;
     }
     img{
@@ -230,5 +247,20 @@ p{
     to{
         opacity: 1;
         transform: 0em;
+    }
+}
+
+@keyframes overlay {
+    0%{
+        opacity: 0;
+    }
+    30%{
+        opacity: 1;
+    }
+    70%{
+    opacity: 1
+    }
+    100%{
+        opacity: 0;
     }
 }
